# ai_audit_report_writer

./: IT-Output.odt  output.odt
audit_report_writing_crew/: README.md  finding.md  gia_finding.md  pyproject.toml
audit_report_writing_crew/src/audit_report_writing_crew/: crew.py  main.py
audit_report_writing_crew/src/audit_report_writing_crew/config/: agents.yaml  tasks.yaml
