[project]
name = "audit_report_writing_crew"
version = "0.1.0"
description = "audit_report_writing_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
audit_report_writing_crew = "audit_report_writing_crew.main:run"
run_crew = "audit_report_writing_crew.main:run"
train = "audit_report_writing_crew.main:train"
replay = "audit_report_writing_crew.main:replay"
test = "audit_report_writing_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
